# django-live-transcription

./: .gitconfig  README.md  app.py  index.html  pyproject.toml  test_merge_functionality.py  test_notification_data.py  test_section_updates.py  test_visual_updates.html
histories/: covid.json  full_history.json  mecfs.json
static/: patient_history.json
